// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Component should match snapshot when the menu is closed 1`] = `
<nav
  aria-label="secondary navigation"
  className="navigation-menu "
>
  <div
    className="navbar is-primary"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item hackernews-logo"
        href="/"
      >
        <img
          alt="Hackernews"
          src="/assets/hackernews.svg"
        />
      </a>
    </div>
  </div>
  <div
    className="menu"
  >
    <p
      className="menu-label"
    >
      More HackerNews Stories
    </p>
    <ul
      className="menu-list"
    >
      <li>
        <a
          className="is-active"
          onClick={[Function]}
        >
          Top Stories
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          New on HackerNews
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Best Of
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Show HackerNews
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Ask HackerNews
        </a>
      </li>
    </ul>
  </div>
  <footer>
    <div
      className="tags has-addons"
    >
      <span
        className="tag"
      >
        Connectivity
      </span>
      <span
        className="tag is-primary"
      >
        Online!
      </span>
    </div>
  </footer>
</nav>
`;

exports[`Menu Component should match snapshot when the menu is open 1`] = `
<nav
  aria-label="secondary navigation"
  className="navigation-menu is-open"
>
  <div
    className="navbar is-primary"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item hackernews-logo"
        href="/"
      >
        <img
          alt="Hackernews"
          src="/assets/hackernews.svg"
        />
      </a>
    </div>
  </div>
  <div
    className="menu"
  >
    <p
      className="menu-label"
    >
      More HackerNews Stories
    </p>
    <ul
      className="menu-list"
    >
      <li>
        <a
          className="is-active"
          onClick={[Function]}
        >
          Top Stories
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          New on HackerNews
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Best Of
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Show HackerNews
        </a>
      </li>
      <li>
        <a
          className=""
          onClick={[Function]}
        >
          Ask HackerNews
        </a>
      </li>
    </ul>
  </div>
  <footer>
    <div
      className="tags has-addons"
    >
      <span
        className="tag"
      >
        Connectivity
      </span>
      <span
        className="tag is-primary"
      >
        Online!
      </span>
    </div>
  </footer>
</nav>
`;
